manifests/nginx-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: nginx
