manifests/nginx-app/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: nginx-ingress
spec:
  tls:
  - hosts:
    - marcel.test
    secretName: marcel-tls-secret
  rules:
  - host: marcel.test
    http:
      paths:
      - path: /v1/hello
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port: 
              name: web
      - path: /v2/hello
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port: 
              name: web
